--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>Сучасна пекарня</title>
 </head>
 
@@ -57,7 +58,7 @@
             <div class="container">
                 <div class="traditions-section__container">
                     <div class="traditions-section__content">
-                        <h2 class="traditions-section__title section-title">Новий формат традицій</h2>
+                        <h2 class="traditions-section__title section__title">Новий формат традицій</h2>
                         <p><span class="text-uppercase text-brand text-bold">shop bakery</span> — це пекарня, яка
                             взяла все найкраще, і зберегла смак традиційної випічки та
                             натуральність інгредієнтів.</p>
@@ -69,8 +70,8 @@
                         </p>
                     </div>
                     <div class="traditions-section__image">
-                        <img srcset="img/baker-man.jpg 1x, img/baker-manX2.jpg 2x"
-                        src="img/baker-man.jpg" alt="Чоловік пекар дивиться на батони з посмішкою">
+                        <img srcset="img/baker-man.jpg 1x, img/baker-manX2.jpg 2x" src="img/baker-man.jpg"
+                            alt="Чоловік пекар дивиться на батони з посмішкою">
                     </div>
                 </div>
             </div>
@@ -119,50 +120,100 @@
             <div class="container">
                 <h2 class="formats-section__title section__title section__title--centered">Формати</h2>
                 <div class="formats-section__slider">
-                    <button class="formats-section__button carousel-button" type="button">
+                    <button class="formats-section__button carousel-button prev" type="button">
                         <svg class="carousel-arrow" width="44" height="44">
                             <use href="/img/symbol-defs.svg#icon-Arrow"></use>
                         </svg>
                     </button>
-                    <ul class="formats-section__list">
-                        <li class="formats-section__item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="/img/walrus-format.jpg" alt="walrus format">
-                                <h3 class="format-card__title">Walrus</h3>
-                                <div class="format-card__text">
-                                    <p>Площа: до 120 м2</p>
-                                    <p>Меню: розширене меню</p>
-                                    <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
-                                    <p>Посадкові місця: є</p>
-                                </div>
-                            </article>
-                        </li>
-                        <li class="formats-section__item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="/img/horseshoe-format.jpg" alt="horseshoe format">
-                                <h3 class="format-card__title">Horseshoe</h3>
-                                <div class="format-card__text">
-                                    <p>Площа: до 25 м2</p>
-                                    <p>Меню: найпопулярніші позиції меню</p>
-                                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                                    <p>Посадкові місця: відсутні</p>
-                                </div>
-                            </article>
-                        </li>
-                        <li class="formats-section__item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="/img/handlebar-format.jpg" alt="handlebar format">
-                                <h3 class="format-card__title">Handlebar</h3>
-                                <div class="format-card__text">
-                                    <p>Площа: до 15 м2</p>
-                                    <p>Меню: найпопулярніші позиції меню</p>
-                                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                                    <p>Посадкові місця: відсутні</p>
-                                </div>
-                            </article>
-                        </li>
-                    </ul>
-                    <button class="carousel-button" type="button">
+                    <div class="formats-section__container swiper-container">
+                        <ul class="formats-section__list swiper-wrapper">
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/walrus-format.jpg" alt="walrus format">
+                                    <h3 class="format-card__title">Walrus</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 120 м2</p>
+                                        <p>Меню: розширене меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби
+                                        </p>
+                                        <p>Посадкові місця: є</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/horseshoe-format.jpg"
+                                        alt="horseshoe format">
+                                    <h3 class="format-card__title">Horseshoe</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 25 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/handlebar-format.jpg"
+                                        alt="handlebar format">
+                                    <h3 class="format-card__title">Handlebar</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 15 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/walrus-format.jpg" alt="walrus format">
+                                    <h3 class="format-card__title">Walrus</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 120 м2</p>
+                                        <p>Меню: розширене меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби
+                                        </p>
+                                        <p>Посадкові місця: є</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/horseshoe-format.jpg"
+                                        alt="horseshoe format">
+                                    <h3 class="format-card__title">Horseshoe</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 25 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="/img/handlebar-format.jpg"
+                                        alt="handlebar format">
+                                    <h3 class="format-card__title">Handlebar</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 15 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                        </ul>
+                        <div class="pagination">
+                            <span class="pagination__button"></span>
+                            <span class="pagination__button"></span>
+                            <span class="pagination__button"></span>
+                            <span class="pagination__button"></span>
+                        </div>
+                    </div>
+                    <button class="formats-section__button carousel-button next" type="button">
                         <svg class="carousel-arrow" width="44" height="44">
                             <use href="/img/symbol-defs.svg#icon-Arrow-1"></use>
                         </svg>
@@ -201,8 +252,7 @@
                     </div>
                     <iframe class="contact-section__map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3257.892465097796!2d30.488653212580168!3d50.45667308679651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e1!3m2!1suk!2sua!4v1699531225714!5m2!1suk!2sua"
-                        width="603" height="595" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
             </div>
@@ -210,50 +260,52 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <nav class="footer-nav">
-                    <div class="footer-logo">
+            <div class="footer__container">
+                <nav class="footer__nav">
+                    <div class="footer__logo">
                         <a href="#">
                             <img src="img/logo.svg" alt="Логотип сучасної пекарні">
                         </a>
                     </div>
-                    <ul class="footer-menu">
+                    <ul class="footer__menu">
                         <li><a class="link" href="#">Франшиза</a></li>
                         <li><a class="link" href="#">Наші традиції</a></li>
                         <li><a class="link" href="#">Формати</a></li>
                         <li><a class="link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
-                <address class="footer-address">
-                    <ul class="address-list">
-                        <li>
-                            <a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
-                        </li>
-                        <li>
-                            <a class="address-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
-                        </li>
-                        <li>
-                            <a class="address-link" href="https://maps.app.goo.gl/Ji9ckEUh2Fgn6dQaA" target="_blank">
-                                Україна, м. Київ, вул. Січових Стрільців 54</a>
-                        </li>
-                        <li>
+                <address class="footer__address">
+                    <div class="footer__contacts">
+                        <ul class="footer__address-list">
+                            <li>
+                                <a class="footer__address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+                            </li>
+                            <li>
+                                <a class="footer__address-link"
+                                    href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+                            </li>
+                            <li>
+                                <a class="footer__address-link" href="https://maps.app.goo.gl/Ji9ckEUh2Fgn6dQaA"
+                                    target="_blank">
+                                    Україна, м. Київ, вул. Січових Стрільців 54</a>
+                            </li>
+                        </ul>
+                        <div class="footer__socials">
                             <a href="#">
-                                <svg class="address-icon" widtg="32" height="32">
+                                <svg class="footer__socials-icon" width="32" height="32">
                                     <use href="/img/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
-                        </li>
-                        <li>
                             <a href="#">
-                                <svg class="address-icon" widtg="32" height="32">
+                                <svg class="footer__socials-icon" width="32" height="32">
                                     <use href="/img/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
-                        </li>
-                    </ul>
-                    <div class="address-info">
-                        <a class="address-link" href="#" target="_blank">Політика конфіденційності</a>
-                        <p class="address-copyright">&copy; 2022 Дані захищені</p>
+                        </div>
+                    </div>
+                    <div class="footer__address-info">
+                        <a class="footer__address-link" href="#" target="_blank">Політика конфіденційності</a>
+                        <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
                     </div>
                 </address>
             </div>
@@ -290,6 +342,9 @@
 
     </div>
     <script src="/js/modal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="/js/mobile-menu.js"></script>
+    <script src="/js/formats-slider.js"></script>
 </body>
 
 </html>
